# tidysh

./: CMakeLists.txt  README.md  test.sh  tidy.sh
examples/: install.sh
